# serializer version: 1
# name: test_sensors[binary_sensor.nina_warning_aach_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.nina_warning_aach_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SAFETY: 'safety'>,
    'original_icon': None,
    'original_name': 'Warning: Aach 1',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '095760000000-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[binary_sensor.nina_warning_aach_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'affected_areas': 'Gemeinde Oberreichenbach, Gemeinde Neuweiler, Stadt Nagold, Stadt Neubulach, Gemeinde Schömberg, Gemeinde Simmersfeld, Gemeinde Simmozheim, Gemeinde Rohrdorf, Gemeinde Ostelsheim, Gemeinde Ebhausen, Gemeinde Egenhausen, Gemeinde Dobel, Stadt Bad Liebenzell, Stadt Solingen, Stadt Haiterbach, Stadt Bad Herrenalb, Gemeinde Höfen an der Enz, Gemeinde Gechingen, Gemeinde Enzklösterle, Gemeinde Gutach (Schwarzwaldbahn) und 3392 weitere.',
      'description': 'Es treten Sturmböen mit Geschwindigkeiten zwischen 70 km/h (20m/s, 38kn, Bft 8) und 85 km/h (24m/s, 47kn, Bft 9) aus westlicher Richtung auf. In Schauernähe sowie in exponierten Lagen muss mit schweren Sturmböen bis 90 km/h (25m/s, 48kn, Bft 10) gerechnet werden.',
      'device_class': 'safety',
      'expires': '3021-11-22T05:19:00+01:00',
      'friendly_name': 'NINA Warning: Aach 1',
      'headline': 'Ausfall Notruf 112',
      'id': 'mow.DE-NW-BN-SE030-20201014-30-000',
      'recommended_actions': '',
      'sender': 'Deutscher Wetterdienst',
      'sent': '2021-10-11T05:20:00+01:00',
      'severity': 'Minor',
      'start': '2021-11-01T05:20:00+01:00',
      'web': 'https://www.wettergefahren.de',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.nina_warning_aach_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_sensors[binary_sensor.nina_warning_aach_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.nina_warning_aach_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SAFETY: 'safety'>,
    'original_icon': None,
    'original_name': 'Warning: Aach 2',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '095760000000-2',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[binary_sensor.nina_warning_aach_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'safety',
      'friendly_name': 'NINA Warning: Aach 2',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.nina_warning_aach_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_sensors[binary_sensor.nina_warning_aach_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.nina_warning_aach_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SAFETY: 'safety'>,
    'original_icon': None,
    'original_name': 'Warning: Aach 3',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '095760000000-3',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[binary_sensor.nina_warning_aach_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'safety',
      'friendly_name': 'NINA Warning: Aach 3',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.nina_warning_aach_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_sensors[binary_sensor.nina_warning_aach_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.nina_warning_aach_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SAFETY: 'safety'>,
    'original_icon': None,
    'original_name': 'Warning: Aach 4',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '095760000000-4',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[binary_sensor.nina_warning_aach_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'safety',
      'friendly_name': 'NINA Warning: Aach 4',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.nina_warning_aach_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_sensors[binary_sensor.nina_warning_aach_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.nina_warning_aach_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SAFETY: 'safety'>,
    'original_icon': None,
    'original_name': 'Warning: Aach 5',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '095760000000-5',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[binary_sensor.nina_warning_aach_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'safety',
      'friendly_name': 'NINA Warning: Aach 5',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.nina_warning_aach_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_sensors_with_area_filter[binary_sensor.nina_warning_aach_stadt_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.nina_warning_aach_stadt_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SAFETY: 'safety'>,
    'original_icon': None,
    'original_name': 'Warning: Aach, Stadt 1',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '083350000000-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors_with_area_filter[binary_sensor.nina_warning_aach_stadt_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'affected_areas': 'Gemeinde Oberreichenbach, Gemeinde Neuweiler, Stadt Nagold, Stadt Neubulach, Gemeinde Schömberg, Gemeinde Simmersfeld, Gemeinde Simmozheim, Gemeinde Rohrdorf, Gemeinde Ostelsheim, Gemeinde Ebhausen, Gemeinde Egenhausen, Gemeinde Dobel, Stadt Bad Liebenzell, Stadt Solingen, Stadt Haiterbach, Stadt Bad Herrenalb, Gemeinde Höfen an der Enz, Gemeinde Gechingen, Gemeinde Enzklösterle, Gemeinde Gutach (Schwarzwaldbahn) und 3392 weitere.',
      'description': 'Es treten Sturmböen mit Geschwindigkeiten zwischen 70 km/h (20m/s, 38kn, Bft 8) und 85 km/h (24m/s, 47kn, Bft 9) aus westlicher Richtung auf. In Schauernähe sowie in exponierten Lagen muss mit schweren Sturmböen bis 90 km/h (25m/s, 48kn, Bft 10) gerechnet werden.',
      'device_class': 'safety',
      'expires': '3021-11-22T05:19:00+01:00',
      'friendly_name': 'NINA Warning: Aach, Stadt 1',
      'headline': 'Ausfall Notruf 112',
      'id': 'mow.DE-NW-BN-SE030-20201014-30-000',
      'recommended_actions': '',
      'sender': 'Deutscher Wetterdienst',
      'sent': '2021-10-11T05:20:00+01:00',
      'severity': 'Minor',
      'start': '2021-11-01T05:20:00+01:00',
      'web': 'https://www.wettergefahren.de',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.nina_warning_aach_stadt_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_sensors_with_area_filter[binary_sensor.nina_warning_aach_stadt_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.nina_warning_aach_stadt_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SAFETY: 'safety'>,
    'original_icon': None,
    'original_name': 'Warning: Aach, Stadt 2',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '083350000000-2',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors_with_area_filter[binary_sensor.nina_warning_aach_stadt_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'safety',
      'friendly_name': 'NINA Warning: Aach, Stadt 2',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.nina_warning_aach_stadt_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_sensors_with_area_filter[binary_sensor.nina_warning_aach_stadt_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.nina_warning_aach_stadt_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SAFETY: 'safety'>,
    'original_icon': None,
    'original_name': 'Warning: Aach, Stadt 3',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '083350000000-3',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors_with_area_filter[binary_sensor.nina_warning_aach_stadt_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'safety',
      'friendly_name': 'NINA Warning: Aach, Stadt 3',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.nina_warning_aach_stadt_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_sensors_with_area_filter[binary_sensor.nina_warning_aach_stadt_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.nina_warning_aach_stadt_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SAFETY: 'safety'>,
    'original_icon': None,
    'original_name': 'Warning: Aach, Stadt 4',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '083350000000-4',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors_with_area_filter[binary_sensor.nina_warning_aach_stadt_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'safety',
      'friendly_name': 'NINA Warning: Aach, Stadt 4',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.nina_warning_aach_stadt_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_sensors_with_area_filter[binary_sensor.nina_warning_aach_stadt_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.nina_warning_aach_stadt_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SAFETY: 'safety'>,
    'original_icon': None,
    'original_name': 'Warning: Aach, Stadt 5',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '083350000000-5',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors_with_area_filter[binary_sensor.nina_warning_aach_stadt_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'safety',
      'friendly_name': 'NINA Warning: Aach, Stadt 5',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.nina_warning_aach_stadt_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_sensors_without_corona_filter[binary_sensor.nina_warning_aach_stadt_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.nina_warning_aach_stadt_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SAFETY: 'safety'>,
    'original_icon': None,
    'original_name': 'Warning: Aach, Stadt 1',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '083350000000-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors_without_corona_filter[binary_sensor.nina_warning_aach_stadt_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'affected_areas': 'Bundesland: Freie Hansestadt Bremen, Land Berlin, Land Hessen, Land Nordrhein-Westfalen, Land Brandenburg, Freistaat Bayern, Land Mecklenburg-Vorpommern, Land Rheinland-Pfalz, Freistaat Sachsen, Land Schleswig-Holstein, Freie und Hansestadt Hamburg, Freistaat Thüringen, Land Niedersachsen, Land Saarland, Land Sachsen-Anhalt, Land Baden-Württemberg',
      'description': 'Die Zahl der mit dem Corona-Virus infizierten Menschen steigt gegenwärtig stark an. Es wächst daher die Gefahr einer weiteren Verbreitung der Infektion und - je nach Einzelfall - auch von schweren Erkrankungen.',
      'device_class': 'safety',
      'expires': '',
      'friendly_name': 'NINA Warning: Aach, Stadt 1',
      'headline': 'Corona-Verordnung des Landes: Warnstufe durch Landesgesundheitsamt ausgerufen',
      'id': 'mow.DE-BW-S-SE018-20211102-18-001',
      'recommended_actions': 'Waschen sich regelmäßig und gründlich die Hände.',
      'sender': '',
      'sent': '2021-11-02T20:07:16+01:00',
      'severity': 'Minor',
      'start': '',
      'web': '',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.nina_warning_aach_stadt_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_sensors_without_corona_filter[binary_sensor.nina_warning_aach_stadt_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.nina_warning_aach_stadt_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SAFETY: 'safety'>,
    'original_icon': None,
    'original_name': 'Warning: Aach, Stadt 2',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '083350000000-2',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors_without_corona_filter[binary_sensor.nina_warning_aach_stadt_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'affected_areas': 'Gemeinde Oberreichenbach, Gemeinde Neuweiler, Stadt Nagold, Stadt Neubulach, Gemeinde Schömberg, Gemeinde Simmersfeld, Gemeinde Simmozheim, Gemeinde Rohrdorf, Gemeinde Ostelsheim, Gemeinde Ebhausen, Gemeinde Egenhausen, Gemeinde Dobel, Stadt Bad Liebenzell, Stadt Solingen, Stadt Haiterbach, Stadt Bad Herrenalb, Gemeinde Höfen an der Enz, Gemeinde Gechingen, Gemeinde Enzklösterle, Gemeinde Gutach (Schwarzwaldbahn) und 3392 weitere.',
      'description': 'Es treten Sturmböen mit Geschwindigkeiten zwischen 70 km/h (20m/s, 38kn, Bft 8) und 85 km/h (24m/s, 47kn, Bft 9) aus westlicher Richtung auf. In Schauernähe sowie in exponierten Lagen muss mit schweren Sturmböen bis 90 km/h (25m/s, 48kn, Bft 10) gerechnet werden.',
      'device_class': 'safety',
      'expires': '3021-11-22T05:19:00+01:00',
      'friendly_name': 'NINA Warning: Aach, Stadt 2',
      'headline': 'Ausfall Notruf 112',
      'id': 'mow.DE-NW-BN-SE030-20201014-30-000',
      'recommended_actions': '',
      'sender': 'Deutscher Wetterdienst',
      'sent': '2021-10-11T05:20:00+01:00',
      'severity': 'Minor',
      'start': '2021-11-01T05:20:00+01:00',
      'web': 'https://www.wettergefahren.de',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.nina_warning_aach_stadt_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_sensors_without_corona_filter[binary_sensor.nina_warning_aach_stadt_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.nina_warning_aach_stadt_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SAFETY: 'safety'>,
    'original_icon': None,
    'original_name': 'Warning: Aach, Stadt 3',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '083350000000-3',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors_without_corona_filter[binary_sensor.nina_warning_aach_stadt_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'safety',
      'friendly_name': 'NINA Warning: Aach, Stadt 3',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.nina_warning_aach_stadt_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_sensors_without_corona_filter[binary_sensor.nina_warning_aach_stadt_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.nina_warning_aach_stadt_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SAFETY: 'safety'>,
    'original_icon': None,
    'original_name': 'Warning: Aach, Stadt 4',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '083350000000-4',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors_without_corona_filter[binary_sensor.nina_warning_aach_stadt_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'safety',
      'friendly_name': 'NINA Warning: Aach, Stadt 4',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.nina_warning_aach_stadt_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_sensors_without_corona_filter[binary_sensor.nina_warning_aach_stadt_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.nina_warning_aach_stadt_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SAFETY: 'safety'>,
    'original_icon': None,
    'original_name': 'Warning: Aach, Stadt 5',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '083350000000-5',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors_without_corona_filter[binary_sensor.nina_warning_aach_stadt_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'safety',
      'friendly_name': 'NINA Warning: Aach, Stadt 5',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.nina_warning_aach_stadt_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
